tests/toylang/neg/001571_mutation.toylang
program a = { while do a sleep; } .
